# ruscall-online

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose-prod.yml  docker-compose.yml  heroku.yml
front/: package-lock.json  package.json
front/public/: index.html
front/src/: App.vue
html/: index.html
src/: main.rs
