[package]
name = "ruscall-online"
version = "0.1.0"
authors = ["elipmoc <relipmoc101@gmail.com>"]

[dependencies]
ruscall={git="https://github.com/elipmoc/Ruscall.git", branch="develop"}
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm6-0" }
actix-web = "0.7"
serde_derive = "1.0.80"
serde="1"
serde_json="1"

[patch."https://github.com/TheDan64/inkwell"]
inkwell = { git = "https://github.com/elipmoc/inkwell", branch = "llvm6-0"}